--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,24 @@ ul{
 color: aliceblue;
 font-weight: 700;
 }
-
+.header__content{
+    height: 800px;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header__content h1{
+    color: aliceblue;
+    font-size: 50px;
+}
+.start{
+    clip-path: polygon(50% 0%, 58% 41%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 41% 40%);
+    background: yellow;
+    margin-left: 10px;
+    width: 50px;
+    height: 50px;
+}
 
 
 
